# kernel-presentation

./: Gruntfile.js  index.html  slides.md
examples/hello-world/: kernel.S  kernel.lds
examples/simple/: CMakeLists.txt  kernel.S
